[tool.poetry]
name = "fly-python-example"
version = "0.1.0"
description = ""
authors = ["Brian Li <53635700+rhizome-labs@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fly_python_example"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
